Resources/clean_c_files_rte/c_files_acsl_by_rte/output_altergo_tests/output_is_nat_altergo.txt
[kernel] Parsing is_nat_rte.c (with preprocessing)
[kernel] is_nat_rte.c:1: 
  syntax error:
  Location: line 1, column 1, before or at token: [
  1     [kernel] Warning: no input file.
        ^
  2     [kernel] Parsing is_nat.c (with preprocessing)
  3     [rte:annot] annotating function is_nat
[kernel] Frama-C aborted: invalid user input.
